--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p id="data">Data</p>
                 <p>verse</p>
             </div>
-            <p id="intro_text">An Open-Source Software (OSS) that integrates database management, data visualization,
+            <p id="intro_text">An Open-Source Software (OSS) that integrates database management, data visualization
                 and data wrangling.</p>
             <p id="intro_text">The adjoining map shows people who are using or contributing to Dataverse.</p>
             <button id="download_btn" onclick="download_prompt()">Get Dataverse</button>
