--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
+                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md" class="table_link">Documentation</a></td>
+            </tr>
+            <tr>
                 <td>
                     <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
                         class="table_link">Figma
@@ -65,7 +68,7 @@
                 <td><a href="" class="table_link">Code of Conduct</a></td>
             </tr>
             <tr>
-                <td><a href="" class="table_link">License</a></td>
+                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/LICENSE" class="table_link">License</a></td>
             </tr>
         </table>
     </div>
