--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <td><a href="" class="table_link">Code of Conduct</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/LICENSE" class="table_link">License</a></td>
+                <td><a href="website/license.html" class="table_link">License</a></td>
             </tr>
         </table>
     </div>
