--- a/website/license.html
+++ b/website/license.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>License</title>
 </head>
-<body bgcolor="black" font-color="white">
+<body bgcolor="black" color="white">
 MIT License
 
 Copyright (c) 2024 Tejas Gupta
