--- a/website/license.html
+++ b/website/license.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>License</title>
 </head>
-<body bgcolor="black">
-    <font color="white">
+<body bgcolor="#191a19">
+    <font color="#a4a6a5">
 MIT License
 <br><br>
 Copyright &copy; 2024 Tejas Gupta
