--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                 <p id="htmltag">HTML</p>
                 <p id="csstag">CSS</p>
                 <p id="jstag">JavaScript</p>
+                <p id="exceltag">MS Excel</p>
             </div>
             <p class="text">As this is an open-source project, contributions are always welcome. Whether you're
                 interested in adding new features, fixing bugs, or improving documentation, your contributions are
