--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="download" id="download">
         <div class="left">
-            <div id="map"><img src="https://cdn-icons-png.flaticon.com/512/0/614.png" id="aeroplane"></div>
+            <div id="map"><div class="direction"><img src="https://cdn-icons-png.flaticon.com/512/0/614.png" id="aeroplane"></div></div>
         </div>
         <div class="right">
             <div class="top_dataverse">
