--- a/index.html
+++ b/index.html
@@ -94,14 +94,16 @@
                 and data wrangling.</p>
             <p id="intro_text">The adjoining map shows people who are using or contributing to Dataverse.</p>
             <button id="download_btn"
-                onclick="showCustomAlert('Dataverse is currently under development. It will be available for installastion soon.\n\nHowever, you can visit the following link to run the project locally on your computer:', 'https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#deployment-specifications','Try Dataverse')">Get
+                onclick="showCustomAlert('Dataverse is currently under development. It will be available for installastion soon.\n\nHowever, you can visit the following link to run the project locally on your computer:')">Get
                 Dataverse</button>
 
             <div id="custom-alert" class="custom-alert">
                 <div class="custom-alert-content">
                     <span id="alert-message"></span>
-                    <a id="alert-link" href="#" target="_blank"></a>
-                    <button onclick="closeCustomAlert()">OK</button>
+                    <div class="row_buttons">
+                    <a href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#deployment-specifications"><button>Try Dataverse</button></a>
+                    <button onclick="closeCustomAlert()" id="later">Later</button>
+                </div>
                 </div>
             </div>
 
