--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     <div class="plane" id="plane">
         <table>
             <tr>
+                <td><a href="https://coedittool.netlify.app/" class="table_link">Coedit</a></td>
+            </tr>
+            <tr>
                 <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link">Encryptify</a></td>
             </tr>
             <tr>
