modified codeIt link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="https://coedittool.netlify.app/" class="table_link">Coedit</a></td>
+                <td><a href="https://codeittool.netlify.app/" class="table_link">CodeIt</a></td>
             </tr>
             <tr>
                 <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link">Encryptify</a></td>
