--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <p>Let Me Know Your Thoughts!</p>
             <input type="text" name="Name" placeholder="Your Name" required>
             <input type="email" name="Email" placeholder="Your Email ID" required>
-            <textarea name="Message" placeholder="Your Message" required></textarea>
+            <input name="Message" placeholder="Your Message" required>
             <input type="submit" value="Send" id="send">
         </form>  
     </footer>
