now different tabs open

--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
     </div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="website/script.js"></script>
+    <a href="https://github.com/multiverseweb/Dataverse" target="_blank" class="table_link">GitHub Repository</a>
+
 
 </body>
 
