--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="https://codeittool.netlify.app/" class="table_link">CodeIt</a></td>
+                <td><a href="https://codeittool.netlify.app/" class="table_link" target="_blank">CodeIt</a></td>
             </tr>
             <tr>
-                <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link">Encryptify</a></td>
+                <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link" target="_blank">Encryptify</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
+                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link" target="_blank">Github Repository</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
-                        class="table_link">Documentation</a></td>
+                        class="table_link" target="_blank">Documentation</a></td>
             </tr>
             <tr>
                 <td>
                     <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
-                        class="table_link">Figma
+                        class="table_link" target="_blank">Figma
                         Design</a>
                 </td>
             </tr>
@@ -75,7 +75,7 @@
                 <td><a href="" class="table_link">Code of Conduct</a></td>
             </tr>
             <tr>
-                <td><a href="website/license.html" class="table_link">License</a></td>
+                <td><a href="website/license.html" class="table_link" target="_blank">License</a></td>
             </tr>
         </table>
     </div>
@@ -105,7 +105,7 @@
                     <span id="alert-message"></span>
                     <div class="row_buttons">
                         <a
-                            href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#deployment-specifications"><button>Try
+                            href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#deployment-specifications" target="_blank"><button>Try
                                 Dataverse</button></a>
                         <button onclick="closeCustomAlert()" id="later">Later</button>
                     </div>
@@ -255,8 +255,6 @@
     </div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="website/script.js"></script>
-    <a href="https://github.com/multiverseweb/Dataverse" target="_blank" class="table_link">GitHub Repository</a>
-
 
 </body>
 
