--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
     </div>
     <div class="download" id="download">
         <div class="left">
-            <div id="map">
+            <div id="map" style="
+                position: relative;
+                top: 90px;
+                ">
                 <div class="direction"><img src="https://cdn-icons-png.flaticon.com/512/0/614.png" id="aeroplane"></div>
             </div>
         </div>
