Add Email Existence Check Before Form Submission- document getElement Id variable problem in script.js line 330

--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
         </div>
         <form name="Dataverse Reviews" method="POST" data-netlify="true" onsubmit="return validateForm()">
             <p>Let Me Know Your Thoughts!</p>
-            <input type="text" name="Name" placeholder="Your Name" required>
-            <input type="email" name="Email" placeholder="Your Email ID" required>
-            <input name="Message" placeholder="Your Message" required>
+            <input  id="name" type="text" name="Name" placeholder="Your Name" required>
+            <input type="email" id="email" name="Email" placeholder="Your Email ID" required>
+            <input name="Message" id="Message" placeholder="Your Message" required>
             <input type="submit" value="Send" id="send">
         </form>  
     </footer>
