Add Email Existence Check Before Form Submission- document getElement Id variable problem in script.js line 330

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <navbar id="navbar">
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
-        <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
+        <div class="scrollBar" id="progress_bar"></div>
+        <!--PROGRESS BAR-->
     </navbar>
     <button class="burger" id="burger" onclick="show()"></button>
     <button id="cross" class="burger" onclick="hide()"></button>
@@ -50,14 +51,16 @@
                 <td><a href="https://codeittool.netlify.app/" class="table_link" target="_blank">CodeIt</a></td>
             </tr>
             <tr>
-                <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link" target="_blank">Encryptify</a></td>
+                <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link"
+                        target="_blank">Encryptify</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link" target="_blank">Github Repository</a></td>
+                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link" target="_blank">Github
+                        Repository</a></td>
             </tr>
             <tr>
-                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
-                        class="table_link" target="_blank">Documentation</a></td>
+                <td><a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md" class="table_link"
+                        target="_blank">Documentation</a></td>
             </tr>
             <tr>
                 <td>
@@ -99,8 +102,8 @@
                 <div class="custom-alert-content">
                     <span id="alert-message"></span>
                     <div class="row_buttons">
-                        <a
-                            href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#deployment-specifications" target="_blank"><button>Try
+                        <a href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#deployment-specifications"
+                            target="_blank"><button>Try
                                 Dataverse</button></a>
                         <button onclick="closeCustomAlert()" id="later">Later</button>
                     </div>
@@ -191,7 +194,12 @@
     <div class="section" id="develop">
         <div class="develop_left">
             <p class="heading">Want to contribute to this Project?</p>
-            <div class="subheading" id="technologies"><div class="circle" id="red"></div><div class="circle" id="yellow"></div><div class="circle" id="green"></div><p>Technologies Used</p></div>
+            <div class="subheading" id="technologies">
+                <div class="circle" id="red"></div>
+                <div class="circle" id="yellow"></div>
+                <div class="circle" id="green"></div>
+                <p>Technologies Used</p>
+            </div>
             <div class="tags" id="tags">
                 <p id="pythontag">Python</p>
                 <p id="numpytag">Numpy</p>
@@ -230,11 +238,11 @@
         </div>
         <form name="Dataverse Reviews" method="POST" data-netlify="true" onsubmit="return validateForm()">
             <p>Let Me Know Your Thoughts!</p>
-            <input  id="name" type="text" name="Name" placeholder="Your Name" required>
+            <input id="name" type="text" name="Name" placeholder="Your Name" required>
             <input type="email" id="email" name="Email" placeholder="Your Email ID" required>
             <input name="Message" id="Message" placeholder="Your Message" required>
             <input type="submit" value="Send" id="send">
-        </form>  
+        </form>
     </footer>
     <div class="links">
         <p>Designed & Developed by Tejas Gupta</p>
