--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         </div>
     </div>
     <button class="top" id="top" onclick="topFunction()"><img src="website/web_images/top.png" alt=""></button>
-    <navbar id="navbar">
+    <nav id="navbar">
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
-    </navbar>
+    </nav>
+    
     <button class="burger" id="burger" onclick="show()"></button>
     <button id="cross" class="burger" onclick="hide()"></button>
     <div class="burger" id="lines">
@@ -67,7 +68,7 @@
                 </td>
             </tr>
             <tr>
-                <td><a href="" class="table_link">Code of Conduct</a></td>
+                <td><a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a></td>
             </tr>
             <tr>
                 <td><a href="website/license.html" class="table_link" target="_blank">License</a></td>
@@ -252,5 +253,4 @@
     <script src="website/script.js"></script>
 
 </body>
-
 </html>
