--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body id="body">
@@ -37,7 +38,7 @@
         <img src="website/web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
     </nav>
-    
+
     <button class="burger" id="burger" onclick="show()"></button>
     <button id="cross" class="burger" onclick="hide()"></button>
     <div class="burger" id="lines">
@@ -143,7 +144,7 @@
                 software automatically stores data with a timestamp.</p>
         </div>
     </div>
-    
+
     <div class="section" id="charts">
         <p class="heading">Here are some examples of what you can do with Dataverse</p>
         <div class="examples" id="examples">
@@ -192,7 +193,12 @@
     <div class="section" id="develop">
         <div class="develop_left">
             <p class="heading">Want to contribute to this Project?</p>
-            <div class="subheading" id="technologies"><div class="circle" id="red"></div><div class="circle" id="yellow"></div><div class="circle" id="green"></div><p>Technologies Used</p></div>
+            <div class="subheading" id="technologies">
+                <div class="circle" id="red"></div>
+                <div class="circle" id="yellow"></div>
+                <div class="circle" id="green"></div>
+                <p>Technologies Used</p>
+            </div>
             <div class="tags" id="tags">
                 <p id="pythontag">Python</p>
                 <p id="numpytag">Numpy</p>
@@ -209,8 +215,8 @@
                 interested in adding new features, fixing bugs, or improving documentation, your contributions are
                 valuable. You can contribute to the project by visiting the link to the GitHub repository provided
                 below. Join me in making Dataverse even better for everyone!</p>
-            <a href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#contributions" target="_blank"><button
-                    id="contribute">
+            <a href="https://github.com/multiverseweb/Dataverse?tab=readme-ov-file#contributions"
+                target="_blank"><button id="contribute">
                     <p>Contribute</p><img
                         src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
                 </button></a>
@@ -235,22 +241,34 @@
             <input type="email" name="Email" placeholder="Your Email ID" required>
             <input name="Message" placeholder="Your Message" required>
             <input type="submit" value="Send" id="send">
-        </form>  
+        </form>
     </footer>
     <div class="links">
-        <p>Designed & Developed by Tejas Gupta</p>
+        <p>
+        <h3> Designed & Developed by Tejas Gupta</h3>
+        </p>
         <div class="end_line"></div>
         <div class="small">
             <div class="link_class">
-                <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
+                <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
+                    class="table_link">Documentation↗</a>
+
+                <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
+                    class="table_link">Figma Design↗</a>
+                <a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct↗</a>
+                <a href="website/license.html" class="table_link">License↗</a>
             </div>
             <div class="link_class">
-                <a href="https://github.com/multiverseweb">Github Profile↗</a>
+                <a href="https://tejasgupta.netlify.app"><i class="fa fa-user"></i> Portfolio↗</a>
+                <a href="https://github.com/multiverseweb"><i class="fa fa-github"></i> Github Profile↗</a>
+                <a href="https://tejasgupta.netlify.app"><i class="fa fa-linkedin-square"></i> Linkeldn ↗</a>
             </div>
+
         </div>
-    </div>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="website/script.js"></script>
+        <div class="end_line"></div>
+        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+        <script src="website/script.js"></script>
 
 </body>
+
 </html>
