fixed style.css bugs

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div class="link_class">
                 <a href="https://tejasgupta.netlify.app"><i class="fa fa-user"></i> Portfolio↗</a>
                 <a href="https://github.com/multiverseweb"><i class="fa fa-github"></i> Github Profile↗</a>
-                <a href="https://tejasgupta.netlify.app"><i class="fa fa-linkedin-square"></i> Linkeldn ↗</a>
+                <a href="https://www.linkedin.com/in/tejascodes/"><i class="fa fa-linkedin-square"></i> Linkeldn ↗</a>
             </div>
 
         </div>
