--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <div class="plane" id="plane">
         <table>
             <tr>
+                <td><a href="index.html" class="table_link">Home</a></td>
+            </tr>
+            <tr>
                 <td><a href="https://codeittool.netlify.app/" class="table_link">CodeIt</a></td>
             </tr>
             <tr>
