--- a/website/codeOfconduct.html
+++ b/website/codeOfconduct.html
@@ -45,6 +45,9 @@
     <div class="plane" id="plane">
         <table>
             <tr>
+                <td><a href="/index.html" class="table_link">Home</a></td>
+            </tr>
+            <tr>
                 <td><a href="https://codeittool.netlify.app/" class="table_link" target="_blank">CodeIt</a></td>
             </tr>
             <tr>
