--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
 </head>
 
 <body id="body">
+    <!-- preloader -->
+    <div id="preloader">
+        <div class="loader">
+            <svg viewBox="0 0 80 80">
+                <circle id="test" cx="40" cy="40" r="32"></circle>
+            </svg>
+        </div>
+
+        <div class="loader triangle">
+            <svg viewBox="0 0 86 80">
+                <polygon points="43 8 79 72 7 72"></polygon>
+            </svg>
+        </div>
+
+        <div class="loader">
+            <svg viewBox="0 0 80 80">
+                <rect x="8" y="8" width="64" height="64"></rect>
+            </svg>
+        </div>
+
+        <!-- dribbble -->
+        <a class="dribbble" href="https://dribbble.com/shots/5878367-Loaders" target="_blank"><img src="https://cdn.dribbble.com/assets/dribbble-ball-mark-2bd45f09c2fb58dbbfb44766d5d1d07c5a12972d602ef8b32204d28fa3dda554.svg" alt=""></a>
+    </div>
     <div class="buttons" id="buttons">
         <div id="indicator"></div>
         <div class="group">
@@ -272,6 +295,11 @@
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script src="website/script.js"></script>
         <script>
+            // /preloader js styling
+            let preloader = document.querySelector("#preloader");
+            window.addEventListener("load",function(e){
+                preloader.style.display = "none";
+            });
             function validateForm() {
 
             const nameInput = document.querySelector('[name="Name"]');
