Made changes to the footer section for copyright section
Initially, the font and background of the license page's footer got camouflaged. So, I have fixed the bug, in such a way that font will be in contrast to the background to enhance visibility.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body id="body">
@@ -247,9 +248,12 @@
         </form>
     </footer>
     <div class="links">
-        <p>
+        <p>  
         <h3> Designed & Developed by Tejas Gupta</h3>
         </p>
+        <!--<p>
+            <h4>Copyright &copy; 2024 Tejas Gupta</h4>
+        </p>-->
         <div class="end_line"></div>
         <div class="small">
             <div class="link_class">
