--- a/website/license.html
+++ b/website/license.html
@@ -76,7 +76,21 @@
     <div class="license-content">
         <h2>MIT License</h2>
         <br>
+        <style>
+            body{
+                margin:0;
+            }
+            footer{
+                background: linear-gradient(180deg,silver,rgb(194, 187, 187));
+                padding: 10px;
+                color: whitesmoke;
+            }
+        </style>
+
+        
+        <footer>
         <h3>Copyright &copy; 2024 Tejas Gupta</h3>
+    </footer>
         <br>
         Permission is hereby granted, free of charge, to any person obtaining a copy
         of this software and associated documentation files (the "Software"), to deal
