--- a/signup.html
+++ b/signup.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+    <div style="text-align: right; margin: 10px;">
+        <a href="index.html" class="btn btn-secondary" style="width: 100px;">Back to Home</a>
+    </div>
     <div class="login-container" style="padding-top: 20px;">
         <h2 style="text-align: center;">Signup</h2>
         <div class="mb-3" style="margin-left: 40px;">
