--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
 
 <body>
     <div style="text-align: right; margin: 10px;">
-        <a href="index.html" class="btn btn-secondary" style="width: 100px;">Back to Home</a>
+        <a href="index.html" class="btn btn-secondary" style="width: 150px; position: relative; right: 1330px;">Back to Home</a>
     </div>
     <div class="login-container" style="padding-top: 20px;">
         <h2 style="text-align: center;">Signup</h2>
