I have fixed the glow on the light and dark mode buttons, it now glows over the selected button

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
     <div class="buttons" id="buttons">
         <div id="indicator"></div>
         <div class="group">
-            <button id="first_button" onclick="dark(false)">
+            <button id="darkButton" onclick="dark(false)">
                 <img src="https://static.thenounproject.com/png/4066359-200.png" class="copy" id="moon">
             </button>
-            <button onclick="light(false)">
-                <div id="theme2">
+            <button id="lightButton" onclick="light(false)">
+                <!-- <div id="theme2"> -->
                     <img src="https://cdn-icons-png.freepik.com/256/467/467619.png?semt=ais_hybrid" alt="" class="copy"
                         id="sun">
-                </div>
+                <!-- </div> -->
             </button>
-            <button id="first_button" onclick="systemDefault()">
+            <button id="defaultButton" onclick="systemDefault()">
                 <img src="website/web_images/settings.png" class="copy" id="default">
             </button>
         </div>
