--- a/website/license.html
+++ b/website/license.html
@@ -13,18 +13,16 @@
     <div class="buttons" id="buttons">
         <div id="indicator"></div>
         <div class="group">
-            <button id="first_button" onclick="dark(false)">
+            <button id="darkButton" onclick="dark(false)">
                 <img src="https://static.thenounproject.com/png/4066359-200.png" class="copy" id="moon">
             </button>
-            <button onclick="light(false)">
-                <div id="theme2">
-                    <img src="https://cdn-icons-png.freepik.com/256/467/467619.png?semt=ais_hybrid" alt="" class="copy"
-                        id="sun">
-                </div>
+            <button id="lightButton" onclick="light(false)">
+                <img src="https://cdn-icons-png.freepik.com/256/467/467619.png?semt=ais_hybrid" alt="" class="copy" id="sun">
             </button>
-            <button id="first_button" onclick="systemDefault()">
+            <button id="defaultButton" onclick="systemDefault()">
                 <img src="web_images/settings.png" class="copy" id="default">
             </button>
+            
         </div>
     </div>
     <nav id="navbar">
