--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
             </button>
         </div>
     </div>
-    <button class="top" id="top" onclick="topFunction()"><img src="website/web_images/top.png" alt=""></button>
+    <button class="go-top-btn">
+        <img src="website/web_images/arrow.png" alt="arrow up">
+      </button>
+
+    
     <nav id="navbar">
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
