copyright year is now dynamic

--- a/index.html
+++ b/index.html
@@ -288,9 +288,8 @@
         <p>  
         <h3> Designed & Developed by Tejas Gupta</h3>
         </p>
-        <!--<p>
-            <h4>Copyright &copy; 2024 Tejas Gupta</h4>
-        </p>-->
+        <br>
+        <h4>Copyright &copy; <span id="copyright"></span> Tejas Gupta</h4>
         <div class="end_line"></div>
         <div class="small">
             <div class="link_class">
