--- a/website/license.html
+++ b/website/license.html
@@ -84,13 +84,16 @@
                 background: linear-gradient(180deg,silver,rgb(194, 187, 187));
                 padding: 10px;
                 color: whitesmoke;
+                display: flex;
+                justify-content: center;
             }
         </style>
 
         
-        <footer>
-        <h3>Copyright &copy; 2024 Tejas Gupta</h3>
+    <footer>
+        <h3>Copyright &copy; <span id="copyright"></span> Tejas Gupta</h3>
     </footer>
+    
         <br>
         Permission is hereby granted, free of charge, to any person obtaining a copy
         of this software and associated documentation files (the "Software"), to deal
