--- a/signup.html
+++ b/signup.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .login-container{
+        .login-container {
             width: 500px;
-            height: 500px;
+            height: auto; /* Changed to auto to fit content */
             position: relative;
             top: 100px;
             left: 450px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+        .error-message {
+            color: red;
+            margin: 10px 0;
+            display: none; /* Initially hidden */
         }
     </style>
 </head>
@@ -24,49 +29,66 @@
     </div>
     <div class="login-container" style="padding-top: 20px;">
         <h2 style="text-align: center;">Signup</h2>
+        <div id="errorContainer" class="error-message"></div> <!-- Error message container -->
         <div class="mb-3" style="margin-left: 40px;">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <label for="emailInput" class="form-label">Email address</label>
             <input type="email" class="form-control" id="emailInput" placeholder="name@example.com" style="width: 400px;">
-          </div>
-          <div class="mb-3" style="margin-left: 40px;">
-          <label for="inputPassword5" class="form-label">Password</label>
-<input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px">
-<div id="passwordHelpBlock" class="form-text" style="width: 400px">
-  Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-</div>
-</div>
-<div class="mb-3" style="margin-left: 40px;">
-    <label for="inputPassword5" class="form-label"> Confirm Password</label>
-<input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px">
-</div>
-<button type="button" class="btn btn-primary" id="signupButton" style="width: 400px; margin-left: 40px;">Signup</button>
-<div style="text-align: center; margin-top: 10px;">
-    <p>Already have an accout ?  <a href="login.html" style="text-decoration: none;">Login</a></p>
-</div>
+        </div>
+        <div class="mb-3" style="margin-left: 40px;">
+            <label for="passwordInput" class="form-label">Password</label>
+            <input type="password" placeholder="Enter your Password" id="passwordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px">
+            <div id="passwordHelpBlock" class="form-text" style="width: 400px">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+            </div>
+        </div>
+        <div class="mb-3" style="margin-left: 40px;">
+            <label for="confirmPasswordInput" class="form-label">Confirm Password</label>
+            <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px">
+        </div>
+        <button type="button" class="btn btn-primary" id="signupButton" style="width: 400px; margin-left: 40px;">Signup</button>
+        <div style="text-align: center; margin-top: 10px;">
+            <p>Already have an account? <a href="login.html" style="text-decoration: none;">Login</a></p>
+        </div>
     </div>
     <script>
         document.getElementById('signupButton').addEventListener('click', function() {
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
             const confirmPasswordInput = document.getElementById('confirmPasswordInput');
+            const errorContainer = document.getElementById('errorContainer');
             const emailValue = emailInput.value.trim();
-    const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-    if (!emailRegex.test(emailValue)) {
-      alert('Invalid email address');
-      return;
-    }
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
 
-    // Check if passwords match
-    if (passwordInput.value !== confirmPasswordInput.value) {
-      alert('Both Passwords do not match');
-      return;
-    }
+            // Trusted email domains
+            const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com" , "protonmail.com" , "icloud.com" , "tutanota.com"];
+            const emailDomain = emailValue.split('@')[1];
+
+            // Clear previous error messages
+            errorContainer.style.display = 'none';
+            errorContainer.innerHTML = '';
+
+            // Validate email format and trusted domain
+            if (!emailRegex.test(emailValue) || !trustedDomains.includes(emailDomain)) {
+                errorContainer.innerHTML = 'Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo) etc.';
+                errorContainer.style.display = 'block'; // Show error message
+                return;
+            }
+
+            // Check if passwords match
+            if (passwordInput.value !== confirmPasswordInput.value) {
+                errorContainer.innerHTML = 'Both passwords do not match.';
+                errorContainer.style.display = 'block'; // Show error message
+                return;
+            }
+
+            // Clear input fields
             emailInput.value = '';
             passwordInput.value = '';
             confirmPasswordInput.value = '';
 
+            // Redirect to login page
+            alert('Your account has been created successfully!');
             window.location.href = 'login.html';
-            alert('Your Accout has been cteated successfully!');
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
