--- a/website/contributor.html
+++ b/website/contributor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PenCraft Contributors</title>
+    <title>Dataverse Contributors</title>
     <link rel="stylesheet" href="contributor.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
             <!-- Hero Section -->
             <section class="hero">
                 <div class="hero-content">
-                    <h1>Welcome to PenCraft</h1>
+                    <h1>Welcome to Dataverse</h1>
                     <p>Empowering writers, one commit at a time</p>
                     <button class="btn btn-primary" onclick="scrollToContribute()">Become a Contributor</button>
                 </div>
@@ -39,7 +39,7 @@
             <!-- Call to Action -->
             <section id="contribute" class="cta">
                 <h2>Ready to Make an Impact?</h2>
-                <p>Join our community and help shape the future of PenCraft.</p>
+                <p>Join our community and help shape the future of Dataverse.</p>
                 <form id="subscribeForm">
                     <input type="email" id="emailInput" placeholder="Enter your email" required>
                     <button type="submit" class="btn btn-secondary">Get Started</button>
