--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="scroll_animation"></div>
     </div>
     </div>
-    <div class="section big_container"></div>
+    <div class="section big_container" style=" margin-top: 100px;"></div>
     <div class="section" id="about">
         <div class="about_left">
             <p class="heading">So, What does this Software do?</p>
