--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="scroll_icon" id="scroll_icon">SCROLL TO KNOW MORE
         <div class="shadow" id="shadow"></div>
     </div>
-    <div class="download" id="download">
+    <div class="download" id="download" style="height: 600px;">
         <div class="left">
             <div id="map">
                 <div class="direction"><img src="https://cdn-icons-png.flaticon.com/512/0/614.png" id="aeroplane"></div>
