--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body id="body">
+    <!-- progressbar-->
+    <div id="progressBarContainer">
+        <div id="progressBar"></div>
+    </div>
     <!-- preloader -->
     <div id="preloader">
         <div class="loader">
