Revert "Scroll up #120"

--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
             </button>
         </div>
     </div>
-    <button class="go-top-btn">
-        <img src="website/web_images/arrow.png" alt="arrow up">
-      </button>
-
-    
+    <button class="top" id="top" onclick="topFunction()"><img src="website/web_images/top.png" alt=""></button>
     <nav id="navbar">
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow">
