--- a/website/contributor.html
+++ b/website/contributor.html
@@ -8,14 +8,6 @@
 </head>
 <body>
         <div class="containerr">
-            <!-- Hero Section -->
-            <section class="hero">
-                <div class="hero-content">
-                    <h1>Welcome to Dataverse</h1>
-                    <p>Empowering writers, one commit at a time</p>
-                    <button class="btn btn-primary" onclick="scrollToContribute()">Become a Contributor</button>
-                </div>
-            </section>
 
             <!-- Stats Section -->
             <section class="stats">
@@ -41,8 +33,7 @@
                 <h2>Ready to Make an Impact?</h2>
                 <p>Join our community and help shape the future of Dataverse.</p>
                 <form id="subscribeForm">
-                    <input type="email" id="emailInput" placeholder="Enter your email" required>
-                    <button type="submit" class="btn btn-secondary">Get Started</button>
+                    <button type="submit" class="btn btn-secondary">Join Community</button>
                 </form>
                 <div id="notification" class="notification hidden"></div>
             </section>
