--- a/website/contributor.html
+++ b/website/contributor.html
@@ -11,7 +11,7 @@
 
             <!-- Stats Section -->
             <section class="stats">
-                <h2>Project Statistics</h2>
+                <h2>Dataverse's Contributors Statistics</h2>
                 <div class="stats-grid" id="statsGrid">
                     <!-- Stats will be dynamically inserted here -->
                 </div>
