--- a/website/contributor.html
+++ b/website/contributor.html
@@ -32,7 +32,7 @@
             <section id="contribute" class="cta">
                 <h2>Ready to Make an Impact?</h2>
                 <p>Join our community and help shape the future of Dataverse.</p>
-                <form id="subscribeForm">
+                <form id="subscribeForm" onsubmit="event.preventDefault(); window.location.href='https://github.com/multiverseweb/Dataverse';">
                     <button type="submit" class="btn btn-secondary">Join Community</button>
                 </form>
                 <div id="notification" class="notification hidden"></div>
