home page navbar and signup/login back to home button update

--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
 
 <body>
     <div style="text-align: right; margin: 10px;">
-        <a href="index.html" class="btn btn-secondary" style="width: 150px; position: relative; right: 1330px;">Back to Home</a>
+        <a href="index.html" class="btn btn-secondary" style="width: 150px; position: relative; right: 1250px;">Back to Home</a>
     </div>
     <div class="login-container" style="padding-top: 20px;">
         <h2 style="text-align: center;">Signup</h2>
@@ -46,7 +46,7 @@
             <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 400px">
         </div>
         <button type="button" class="btn btn-primary" id="signupButton" style="width: 400px; margin-left: 40px;">Signup</button>
-        <div style="text-align: center; margin-top: 10px;">
+        <div style="text-align: center; margin-top: 10px; padding-bottom: 11px;">
             <p>Already have an account? <a href="login.html" style="text-decoration: none;">Login</a></p>
         </div>
     </div>
